edited about me page and styled it differently

--- a/index.html
+++ b/index.html
@@ -53,24 +53,31 @@
 
     <main class="container-fluid py-5">
 
-        <div class="row">
-            <div class="col-12 text-center">
-                <h1 class="homepage-title">My Portfolio</h1>
+        <header class="site-header">
+            <h1 class="homepage-title">Ian Cisternas</h1>
+        </header>
+
+
+        <div class="webpage-window mx-auto">
+            <div class="webpage-toolbar">
+                <span class="close-btn"></span>
+                <span class="minimize-btn"></span>
+                <span class="maximize-btn"></span>
+            </div>
+            <div class="row align-items-center justify-content-center">
+                <section class="image-container col-12 col-md-6 order-1 order-md-2 text-center">
+                    <img src="img/Screenshot 2025-05-29 083056.png" alt="Profile Image" class="about-img img-fluid">
+                </section>
+                <section class="about col-12 col-md-6 order-2 order-md-1 text-md-start text-center">
+                    <h1>About Me</h1>
+                    <p>Hello! I’m Ian Cisternas, a web developer passionate about building modern, responsive websites
+                        with
+                        clean design and strong functionality.</p>
+                </section>
             </div>
         </div>
 
-        <div class="row align-items-center justify-content-center mt-5">
-            <section class="image-container col-12 col-md-6 order-1 order-md-2 text-center">
-                <img src="img/Screenshot 2025-05-29 083056.png" alt="Profile Image" class="about-img img-fluid">
-            </section>
 
-            <section class="about col-12 col-md-6 order-2 order-md-1 text-md-start text-center">
-                <h1>About Me</h1>
-                <p>Hello! I’m Ian Cisternas, a web developer passionate about building modern, responsive websites with
-                    clean
-                    design and strong functionality.</p>
-            </section>
-        </div>
     </main>
 
 
@@ -86,3 +93,4 @@
 </body>
 
 </html>
+
