styled about page more

--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,7 @@
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="style.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Roboto:wght@300;400;500&display=swap"
-        rel="stylesheet">
+   <link rel="stylesheet" href="https://use.typekit.net/jxa4ipx.css">
 </head>
 
 <body>
@@ -40,7 +38,7 @@
             <div class="col-md-5 mb-5">
                 <div class="contact-info p-4 rounded shadow-sm">
                     <h3>Contact Information</h3>
-                    <p><i class="fas fa-envelope me-2"></i><a href="mailto:your.email@example.com"
+                    <p><i class="fas fa-envelope me-2"></i><a href="mailto:ian92015@gmail.com"
                             class="contact-link">ian92015@gmail.com</a></p>
                     <p><i class="fas fa-phone me-2"></i><a href="tel:+1234567890" class="contact-link">+1 (234)
                             567-890</a></p>
