--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,7 @@
         <div class="row g-4">
 
             <!-- Project 1 -->
-            <div class="col-md-6">
+           <div class="col-12 col-md-6">
                 <div class="project-frame">
                     <iframe src="https://samhirsch0109.github.io/Graphic-Design/" loading="lazy"></iframe>
                     <div class="project-info text-center mt-3">
@@ -64,7 +64,8 @@
             </div>
 
             <!-- Project 2 -->
-            <div class="col-md-6">
+          <div class="col-12 col-md-6">
+
                 <div class="project-frame">
                     <iframe src="https://iancist.github.io/College-Recruitment/" loading="lazy"></iframe>
                     <div class="project-info text-center mt-3">
