--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Roboto:wght@300;400;500&display=swap"
-        rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/jxa4ipx.css">
 </head>
 
 <body>
@@ -93,4 +91,3 @@
 </body>
 
 </html>
-
