--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,13 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="style.css">
-   <link rel="stylesheet" href="https://use.typekit.net/jxa4ipx.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jxa4ipx.css">
+
 </head>
 
 <body>
@@ -27,12 +31,13 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Projects</a></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main class="container py-5">
-        <h1 class="mb-4 text-center">Get in Touch</h1>
+        <h1 class="mb-4 text-center">Get in Touch With Me</h1>
         <div class="row justify-content-center">
             <!-- Contact Info -->
             <div class="col-md-5 mb-5">
@@ -40,21 +45,32 @@
                     <h3>Contact Information</h3>
                     <p><i class="fas fa-envelope me-2"></i><a href="mailto:ian92015@gmail.com"
                             class="contact-link">ian92015@gmail.com</a></p>
-                    <p><i class="fas fa-phone me-2"></i><a href="tel:+1234567890" class="contact-link">+1 (234)
-                            567-890</a></p>
-
+                    <p><i class="fas fa-phone me-2"></i><a href="tel:+18486001624" class="contact-link">+1 (848)-600-1624</a></p>
                     <h4 class="mt-4">Follow Me</h4>
-                    <div class="social-icons">
-                        <a href="#" aria-label="Twitter" class="me-3"><i class="fab fa-twitter fa-lg"></i></a>
-                        <a href="#" aria-label="LinkedIn" class="me-3"><i class="fab fa-linkedin fa-lg"></i></a>
-                        <a href="#" aria-label="GitHub"><i class="fab fa-github fa-lg"></i></a>
+                    <div class="d-flex gap-3 align-items-center mt-3 social-icons">
+
+                        <a href="https://github.com/IanCist" aria-label="GitHub" target="_blank"
+                            rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#58a6ff"
+                                viewBox="0 0 24 24">
+                                <path
+                                    d="M12 .3a12 12 0 0 0-3.79 23.4c.6.1.82-.26.82-.58v-2.16c-3.34.72-4.04-1.6-4.04-1.6a3.2 3.2 0 0 0-1.34-1.76c-1.1-.76.08-.75.08-.75a2.5 2.5 0 0 1 1.82 1.22 2.6 2.6 0 0 0 3.56 1 2.6 2.6 0 0 1 .78-1.64c-2.66-.3-5.47-1.34-5.47-6a4.7 4.7 0 0 1 1.26-3.26 4.3 4.3 0 0 1 .12-3.2s1-.32 3.3 1.24a11.2 11.2 0 0 1 6 0c2.3-1.56 3.3-1.24 3.3-1.24.42 1.04.44 2.2.12 3.2a4.7 4.7 0 0 1 1.26 3.26c0 4.68-2.8 5.68-5.48 6a3 3 0 0 1 .86 2.3v3.4c0 .32.22.69.82.58A12 12 0 0 0 12 .3Z" />
+                            </svg>
+                        </a>
+
+                        <a href="https://www.instagram.com/iannncisternas" aria-label="Instagram">
+                            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"
+                                width="24" height="24">
+                        </a>
                     </div>
+
                 </div>
             </div>
 
             <!-- Contact Form -->
             <div class="col-md-6">
-                <form class="contact-form p-4 rounded shadow-sm" action="#" method="POST" novalidate>
+                <form class="contact-form p-4 rounded shadow-sm" action="https://formspree.io/f/xjkrvvvd" method="POST">
+
                     <h3>Send a Message</h3>
                     <div class="mb-3">
                         <label for="name" class="form-label">Name *</label>
