--- a/gallery.html
+++ b/gallery.html
@@ -11,9 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="gallery.css" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Roboto:wght@300;400;500&display=swap"
-        rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/jxa4ipx.css">
 </head>
 
 <body>
@@ -37,6 +35,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="gallery.html">Projects</a></li>
+            <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -50,7 +49,7 @@
         <div class="row g-4">
 
             <!-- Project 1 -->
-           <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6">
                 <div class="project-frame">
                     <iframe src="https://samhirsch0109.github.io/Graphic-Design/" loading="lazy"></iframe>
                     <div class="project-info text-center mt-3">
@@ -64,7 +63,7 @@
             </div>
 
             <!-- Project 2 -->
-          <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6">
 
                 <div class="project-frame">
                     <iframe src="https://iancist.github.io/College-Recruitment/" loading="lazy"></iframe>
