added description to website gallery

--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@
                     <iframe src="https://samhirsch0109.github.io/Graphic-Design/" loading="lazy"></iframe>
                     <div class="project-info text-center mt-3">
                         <h3 class="text-info">Graphic Design Page</h3>
-                        <p class="text-white-50">Short description of what this project is about.</p>
+                        <p class="text-white-50">Website created for the Graphic Design department at Marlboro High Schhol</p>
                         <a href="https://samhirsch0109.github.io/Graphic-Design/" target="_blank"
                             class="btn btn-outline-info mt-2">Open in New
                             Tab</a>
@@ -69,7 +69,21 @@
                     <iframe src="https://iancist.github.io/College-Recruitment/" loading="lazy"></iframe>
                     <div class="project-info text-center mt-3">
                         <h3 class="text-info">Kean University</h3>
-                        <p class="text-white-50">Description of this site or tech stack used.</p>
+                        <p class="text-white-50">This website has all the information an upcoming freshman attending Kean University needs to know.</p>
+                        <a href="https://iancist.github.io/College-Recruitment/" target="_blank"
+                            class="btn btn-outline-info mt-2">Open in New
+                            Tab</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6">
+
+                <div class="project-frame">
+                    <iframe src="https://iancist.github.io/Future-Me/" loading="lazy"></iframe>
+                    <div class="project-info text-center mt-3">
+                        <h3 class="text-info">Future Me</h3>
+                        <p class="text-white-50">"Future Me" - Dive into the world of security services! Explore career insights, educational requirements, and earning potentials while uncovering the thrilling realm of safeguarding society. Discover your path to a secure future!</p>
                         <a href="https://iancist.github.io/College-Recruitment/" target="_blank"
                             class="btn btn-outline-info mt-2">Open in New
                             Tab</a>
