--- a/resume.html
+++ b/resume.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        crossorigin="anonymous">
 
     <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="style.css" />
@@ -19,17 +21,35 @@
 </head>
 
 <body>
+
+    <div class="navbar-toggle">
+        <div class="line long"></div>
+        <div class="line short"></div>
+    </div>
+
+
+    <nav class="sidebar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="gallery.html">Projects</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
     <main class="container py-5">
         <h1 class="mb-4 text-center">My Resume</h1>
-        
+
         <div class="resume-summary mb-4 px-4 py-3 rounded shadow-sm">
-            <p>Hello! Here's a brief overview of my professional experience and skills. Feel free to download or view my full resume below.</p>
+            <p>Here's a brief overview of my professional experience and skills. Feel free to download or view my full
+                resume below.</p>
         </div>
 
         <!-- Resume PDF Display -->
         <div class="resume-container p-4 rounded shadow-sm">
-            <iframe src="img/Ian_Cisternas_Resume.pdf" width="100%" height="600" style="border:none; border-radius:12px;" title="Resume PDF"></iframe>
-            
+            <iframe src="img/Ian_Cisternas_Resume.pdf" width="100%" height="600"
+                style="border:none; border-radius:12px;" title="Resume PDF"></iframe>
+
             <div class="mt-4 text-center">
                 <a href="img/Ian_Cisternas_Resume.pdf" download class="btn btn-primary btn-lg">
                     <i class="fas fa-file-download me-2"></i> Download Resume
@@ -39,8 +59,11 @@
     </main>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
