changed description and added more projects to gallery Milestone 7

--- a/gallery.html
+++ b/gallery.html
@@ -77,14 +77,28 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 h-100">
 
                 <div class="project-frame">
                     <iframe src="https://iancist.github.io/Future-Me/" loading="lazy"></iframe>
                     <div class="project-info text-center mt-3">
                         <h3 class="text-info">Future Me</h3>
                         <p class="text-white-50">"Future Me" - Dive into the world of security services! Explore career insights, educational requirements, and earning potentials while uncovering the thrilling realm of safeguarding society. Discover your path to a secure future!</p>
-                        <a href="https://iancist.github.io/College-Recruitment/" target="_blank"
+                        <a href="https://iancist.github.io/Lucky-Me-Lottery/" target="_blank"
+                            class="btn btn-outline-info mt-2">Open in New
+                            Tab</a>
+                    </div>
+                </div>
+            </div>
+
+             <div class="col-12 col-md-6">
+
+                <div class="project-frame">
+                    <iframe src="https://iancist.github.io/Lucky-Me-Lottery/" loading="lazy"></iframe>
+                    <div class="project-info text-center mt-3">
+                        <h3 class="text-info">Rock Paper Scissors</h3>
+                        <p class="text-white-50">RPS is a fun rock, paper, scissors game that you play agains a robot. Play as many times as you want and enjoy!</p>
+                        <a href="https://iancist.github.io/Lucky-Me-Lottery/" target="_blank"
                             class="btn btn-outline-info mt-2">Open in New
                             Tab</a>
                     </div>
