--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
                 </section>
                 <section class="about col-12 col-md-6 order-2 order-md-1 text-md-start text-center">
                     <h1>About Me</h1>
-                    <p>Hello! I’m Ian Cisternas, a web developer passionate about building modern, responsive websites
-                        with
-                        clean design and strong functionality.</p>
+                    <p>Hello! I’m Ian Cisternas, i'm 17 years old, and I have 1 younger sister. My hobbies include going outdoors, haning out with friends and family, and taking naps. I am a web developer and have built multiple responsive websites.</p>
                 </section>
             </div>
         </div>
