changed gallery to inclued photos of website instead of live versions

--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Projects</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -44,69 +44,80 @@
         <h1 class="page-title">My Web Design Projects</h1>
         <p class="subtitle">Click on any project to view the live site</p>
     </header>
-    <main class="container py-5">
-        <h2 class="text-center text-white mb-4">Live Projects</h2>
-        <div class="row g-4">
+   <main class="container py-5">
+    <!-- Web Projects Section -->
+    <h2 class="text-center text-white mb-4">Web Projects</h2>
+    <div class="row g-4">
 
-            <!-- Project 1 -->
-            <div class="col-12 col-md-6">
-                <div class="project-frame">
-                    <iframe src="https://samhirsch0109.github.io/Graphic-Design/" loading="lazy"></iframe>
-                    <div class="project-info text-center mt-3">
-                        <h3 class="text-info">Graphic Design Page</h3>
-                        <p class="text-white-50">Website created for the Graphic Design department at Marlboro High Schhol</p>
-                        <a href="https://samhirsch0109.github.io/Graphic-Design/" target="_blank"
-                            class="btn btn-outline-info mt-2">Open in New
-                            Tab</a>
-                    </div>
+        <!-- Example Project 1 -->
+        <div class="col-12 col-md-6">
+            <div class="project-frame text-center">
+                <img src="img/Screenshot 2025-06-02 112320.png" class="img-fluid rounded shadow" alt="Graphic Design Project">
+                <div class="project-info mt-3">
+                    <h3 class="text-info">Graphic Design Page</h3>
+                    <p class="text-white-50">Website created for the Graphic Design department at Marlboro High School</p>
+                    <a href="https://samhirsch0109.github.io/Graphic-Design/" target="_blank" class="btn btn-outline-info mt-2">Open in New Tab</a>
                 </div>
             </div>
-
-            <!-- Project 2 -->
-            <div class="col-12 col-md-6">
-
-                <div class="project-frame">
-                    <iframe src="https://iancist.github.io/College-Recruitment/" loading="lazy"></iframe>
-                    <div class="project-info text-center mt-3">
-                        <h3 class="text-info">Kean University</h3>
-                        <p class="text-white-50">This website has all the information an upcoming freshman attending Kean University needs to know.</p>
-                        <a href="https://iancist.github.io/College-Recruitment/" target="_blank"
-                            class="btn btn-outline-info mt-2">Open in New
-                            Tab</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-md-6 h-100">
-
-                <div class="project-frame">
-                    <iframe src="https://iancist.github.io/Future-Me/" loading="lazy"></iframe>
-                    <div class="project-info text-center mt-3">
-                        <h3 class="text-info">Future Me</h3>
-                        <p class="text-white-50">"Future Me" - Dive into the world of security services! Explore career insights, educational requirements, and earning potentials while uncovering the thrilling realm of safeguarding society. Discover your path to a secure future!</p>
-                        <a href="https://iancist.github.io/Lucky-Me-Lottery/" target="_blank"
-                            class="btn btn-outline-info mt-2">Open in New
-                            Tab</a>
-                    </div>
-                </div>
-            </div>
-
-             <div class="col-12 col-md-6">
-
-                <div class="project-frame">
-                    <iframe src="https://iancist.github.io/Lucky-Me-Lottery/" loading="lazy"></iframe>
-                    <div class="project-info text-center mt-3">
-                        <h3 class="text-info">Rock Paper Scissors</h3>
-                        <p class="text-white-50">RPS is a fun rock, paper, scissors game that you play agains a robot. Play as many times as you want and enjoy!</p>
-                        <a href="https://iancist.github.io/Lucky-Me-Lottery/" target="_blank"
-                            class="btn btn-outline-info mt-2">Open in New
-                            Tab</a>
-                    </div>
-                </div>
-            </div>
-
         </div>
-    </main>
+
+        <!-- Add similar blocks for each project -->
+        <div class="col-12 col-md-6">
+            <div class="project-frame text-center">
+                <img src="img/Screenshot 2025-06-02 112419.png" class="img-fluid rounded shadow" alt="Kean University Project">
+                <div class="project-info mt-3">
+                    <h3 class="text-info">Kean University</h3>
+                    <p class="text-white-50">Information site for incoming freshmen at Kean University.</p>
+                    <a href="https://iancist.github.io/College-Recruitment/" target="_blank" class="btn btn-outline-info mt-2">Open in New Tab</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Future Me -->
+        <div class="col-12 col-md-6">
+            <div class="project-frame text-center">
+                <img src="img/Screenshot 2025-06-02 112750.png" class="img-fluid rounded shadow" alt="Future Me Project">
+                <div class="project-info mt-3">
+                    <h3 class="text-info">Future Me</h3>
+                    <p class="text-white-50">Explore careers in security services with education and salary insights.</p>
+                    <a href="https://iancist.github.io/Future-Me/" target="_blank" class="btn btn-outline-info mt-2">Open in New Tab</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Rock Paper Scissors -->
+        <div class="col-12 col-md-6">
+            <div class="project-frame text-center">
+                <img src="img/Screenshot 2025-06-02 112856.png" class="img-fluid rounded shadow" alt="Rock Paper Scissors Game">
+                <div class="project-info mt-3">
+                    <h3 class="text-info">Rock Paper Scissors</h3>
+                    <p class="text-white-50">Play rock, paper, scissors against a robot and test your luck!</p>
+                    <a href="https://iancist.github.io/RPS/" target="_blank" class="btn btn-outline-info mt-2">Open in New Tab</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Graphic Design Section -->
+    <h2 class="text-center text-white mt-5 mb-4">Graphic Design Projects</h2>
+    <div class="row g-4">
+
+        <!-- Example Graphic -->
+        <div class="col-12 col-md-4">
+            <img src="images/poster1.png" class="img-fluid rounded shadow" alt="Poster Design 1">
+        </div>
+
+        <div class="col-12 col-md-4">
+            <img src="images/poster2.png" class="img-fluid rounded shadow" alt="Poster Design 2">
+        </div>
+
+        <div class="col-12 col-md-4">
+            <img src="images/logo.png" class="img-fluid rounded shadow" alt="Logo Design">
+        </div>
+
+        <!-- Add more as needed -->
+    </div>
+</main>
 
     <footer>
         <!-- place footer here -->
