changed about me description

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </section>
                 <section class="about col-12 col-md-6 order-2 order-md-1 text-md-start text-center">
                     <h1>About Me</h1>
-                    <p>Hello! I’m Ian Cisternas, i'm 17 years old, and I have 1 younger sister. My hobbies include going outdoors, haning out with friends and family, and taking naps. I am a web developer and have built multiple responsive websites.</p>
+                    <p>Hello! I’m Ian Cisternas, i'm 17 years old, I have 1 younger sister, and I am a senior at Marlboro High School. My hobbies include going outdoors, going to the beach, and hanging out with friends and family. Over the years enrolled in Marlboro High School's web developing program I have learned to build and design multiple responsive websites. Some of the things we learned include, JavaScript, HTML, CSS and Vue. Thats pretty much all about me I hope you enjoy looking at my past projects.</p>
                 </section>
             </div>
         </div>
