added one last project final commit

--- a/gallery.html
+++ b/gallery.html
@@ -96,6 +96,26 @@
                 </div>
             </div>
         </div>
+        <div class="col-12 col-md-6">
+            <div class="project-frame text-center">
+                <img src="img/Screenshot 2025-06-04 at 10.15.57 PM.png" class="img-fluid rounded shadow" alt="Rock Paper Scissors Game">
+                <div class="project-info mt-3">
+                    <h3 class="text-info">Schedule</h3>
+                    <p class="text-white-50">Choose any letter day to see my full schedule</p>
+                    <a href="https://iancist.github.io/Schedule-AJAX---JSON/" target="_blank" class="btn btn-outline-info mt-2">Open in New Tab</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6">
+            <div class="project-frame text-center">
+                <img src="img/Screenshot 2025-06-04 at 10.26.30 PM.png" class="img-fluid rounded shadow" alt="Rock Paper Scissors Game">
+                <div class="project-info mt-3">
+                    <h3 class="text-info">Trunk or Treat</h3>
+                    <p class="text-white-50">Join us at our annual Trunk or Treat Event! Have some fun getting candy and dressing up in your best Halloween costume!</p>
+                    <a href="https://iancist.github.io/Trunk-or-Treat/" target="_blank" class="btn btn-outline-info mt-2">Open in New Tab</a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Graphic Design Section -->
